# shiproom_automation

./: .gitignore  CHANGELOG.md  README.md  app.py  config.yaml  config.yaml.example  config_loader.py  csv_client.py  date_utils.py  due_date_utils.py  filter_utils.py  google_slides.py  jellyfish.py  jira_client.py  main.py  requirements.txt  run_jellyfish_test.sh  status_utils.py  table_utils.py  teams_config.yaml  test_jellyfish_api.py
SprintCapacityCalculator/: .gitignore  QUICK_START.md  README.md  app.py  config.py  env.example  kill_app.sh  launch.command  requirements.txt  run.py  setup.py
SprintCapacityCalculator/templates/: index.html
clients/: jellyfish.py  jira.py
jellyfish-shiproom/: .gitignore  README.md  config.yaml  config.yaml.example  jellyfish_status_report.py  jellyfish_team_ids.json  requirements.txt  teams_config.yaml  test_shiproom_labels.py
jellyfish-shiproom/clients/: google_slides.py  jellyfish.py  jira.py
jellyfish-shiproom/config/: config_loader.py
jellyfish-shiproom/scripts/: update_changelog.py
jellyfish-shiproom/utils/: date_utils.py  due_date_utils.py  filter_utils.py  table_utils.py
jira/epic-due-date-analyser/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
jira/epic-due-date-analyser/src/jira_due_date_analysis/: __init__.py  __main__.py  base_analyzer.py  config.py  deliverable_analyzer.py  epic_analyzer.py  models.py  utils.py  visualizer.py  weekly_extension.py
jira/epic-due-date-analyser/test/: testStartDates.py
utils/: due_date_utils.py  filter_utils.py
(+1 files in other folders)
